--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ footer .nav-links a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   text-align: center;
   width: 50%;
   height: 600px;
